Fix some VM stats to avoid 32-bit overflow

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • hs21
    • Affects Version/s: hs19
    • Component/s: hotspot
    • None
    • b03
    • sparc
    • solaris_10
    • Not verified

        During long enough time (tens minutes) on modern processors some VM statistic 32-bit values overflow. We need to use longs. And when a value is long we still have a problem since it is incremented not atomically in 32-bit VM.

              Assignee:
              Vladimir Kozlov
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: