7017124: Fix some VM stats to avoid 32-bit overflow

Added new method inc_stat_counter() to increment long statistic values and use atomic long load and store.

Reviewed-by: dholmes, jrose, phh, never